--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#F29721">
-    <title>Front X - { NameOfProject }</title>
+    <title>Front X - Artist Profile</title>
   </head>
   <body>
     <noscript>
